--- a/src/components/simple/SearchHistoryTab/HistoryTab/UserSearches/style.scss
+++ b/src/components/simple/SearchHistoryTab/HistoryTab/UserSearches/style.scss
@@ -25,4 +25,10 @@ and (max-width: 1149px) {
     height: 100%;
     margin-top: 15px;
   }
+
+  .scrollbox-history {
+    overflow: auto;
+    height: 1400px;
+    padding-bottom: 30px;
+  }
 }
